@@ -1,3 +1,5 @@
+import org.gradle.api.tasks.testing.logging.TestExceptionFormat
+
 plugins {
     `java-library`
     alias(libs.plugins.kotlin.jvm)
@@ -9,14 +11,34 @@ repositories {
 
 dependencies {
     implementation(project(":java"))
-    testImplementation(kotlin("test"))
     implementation(libs.coroutine.core)
 
-    testImplementation(libs.coroutine.test)
+    testImplementation(kotlin("test"))
+    testImplementation(libs.bundles.kotlin.tests)
 }
 
-tasks.test {
-    useJUnitPlatform()
+tasks.withType<Test>().configureEach {
+    testLogging {
+        exceptionFormat = TestExceptionFormat.FULL
+    }
+    jvmArgs("--add-opens", "java.base/java.time=ALL-UNNAMED")
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+    beforeTest(closureOf<TestDescriptor> { logger.lifecycle("-> $this") })
+    outputs.upToDateWhen { false }
+}
+
+tasks.register<Test>("runLiveObjectUnitTests") {
+    filter {
+        includeTestsMatching("io.ably.lib.objects.unit.*")
+    }
+}
+
+tasks.register<Test>("runLiveObjectIntegrationTests") {
+    filter {
+        includeTestsMatching("io.ably.lib.objects.integration.*")
+        // Exclude the base integration test class
+        excludeTestsMatching("io.ably.lib.objects.integration.setup.IntegrationTest")
+    }
 }
 
 kotlin {
